--- a/.travis.yml
+++ b/.travis.yml
@@ -100,8 +100,8 @@ matrix:
 
 install:
   - chmod +x .ci/install.sh
-  - ./.travis/install.sh
+  - ./.ci/install.sh
 
 script:
   - chmod +x .ci/run.sh
-  - ./.travis/run.sh
+  - ./.ci/run.sh
