--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 linux: &linux
    os: linux
-   dist: xenial
+   dist: bionic
    language: python
    python: "3.7"
    services:
@@ -58,12 +58,10 @@ matrix:
         env: CONAN_CLANG_VERSIONS=8 CONAN_DOCKER_IMAGE=conanio/clang8 CONAN_ARCHS=x86_64 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=2
       - <<: *linux
         env: CONAN_CLANG_VERSIONS=8 CONAN_DOCKER_IMAGE=conanio/clang8 CONAN_ARCHS=x86_64 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=2
-      - <<: *osx
-        osx_image: xcode9
-        env: CONAN_APPLE_CLANG_VERSIONS=9.0 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=2
-      - <<: *osx
-        osx_image: xcode9
-        env: CONAN_APPLE_CLANG_VERSIONS=9.0 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=2
+      - <<: *linux
+        env: CONAN_CLANG_VERSIONS=9 CONAN_DOCKER_IMAGE=conanio/clang9 CONAN_ARCHS=x86_64 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=2
+      - <<: *linux
+        env: CONAN_CLANG_VERSIONS=9 CONAN_DOCKER_IMAGE=conanio/clang9 CONAN_ARCHS=x86_64 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=2
       - <<: *osx
         osx_image: xcode9.4
         env: CONAN_APPLE_CLANG_VERSIONS=9.1 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=2
@@ -76,6 +74,12 @@ matrix:
       - <<: *osx
         osx_image: xcode10.3
         env: CONAN_APPLE_CLANG_VERSIONS=10.0 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=2
+      - <<: *osx
+        osx_image: xcode11.2
+        env: CONAN_APPLE_CLANG_VERSIONS=11.0 CONAN_CURRENT_PAGE=1 CONAN_TOTAL_PAGES=2
+      - <<: *osx
+        osx_image: xcode11.2
+        env: CONAN_APPLE_CLANG_VERSIONS=11.0 CONAN_CURRENT_PAGE=2 CONAN_TOTAL_PAGES=2
 
 install:
   - chmod +x .ci/install.sh
