--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ env:
   global:
     - splitByBuildTypes=true
 
-import: bincrafters/templates:.ci/travis-macos.yml@master
+import: bincrafters/templates:.ci/travis-macos.yml@12f4883f65fcbc521d7425636083ce9bba4be5cd
